Implements task-19021 and task-19005. Adds the very first tests to CollecTor. Increases testability and prepares task-19018. Avoid using literal path separators,use Paths.get instead.